@@ -1,6 +1,6 @@
 Package: Devore5
-Version: 0.3-3
-Date: 2001/01/10
+Version: 0.3-4
+Date: 2001/05/12
 Title: Data sets from Devore's "Prob and Stat for Eng (5th ed)"
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Author: Original by Jay L. Devore, 
