@@ -1,17 +1,17 @@
-strength tempture gas conc block c.1...1...1..1..1...1...1..1..1...1...1..1..1...1...1..1.
-99 -1 -1 -1 1 1
-52 1 1 -1 1 -1
-42 1 -1 1 1 -1
-95 -1 1 1 1 1
-18 1 -1 -1 2 1
-51 -1 1 -1 2 -1
-108 -1 -1 1 2 -1
-35 1 1 1 2 1
-46 -1 -1 -1 3 1
--47 1 1 -1 3 -1
-22 1 -1 1 3 -1
-67 -1 1 1 3 1
-18 1 -1 -1 4 1
-62 -1 1 -1 4 -1
-104 -1 -1 1 4 -1
-36 1 1 1 4 1
+strength tempture gas conc block
+99 -1 -1 -1 1
+52 1 1 -1 1
+42 1 -1 1 1
+95 -1 1 1 1
+18 1 -1 -1 2
+51 -1 1 -1 2
+108 -1 -1 1 2
+35 1 1 1 2
+46 -1 -1 -1 3
+-47 1 1 -1 3
+22 1 -1 1 3
+67 -1 1 1 3
+18 1 -1 -1 4
+62 -1 1 -1 4
+104 -1 -1 1 4
+36 1 1 1 4
